--- a/templates/index.html
+++ b/templates/index.html
@@ -250,10 +250,10 @@
                     class="btn btn-b-n navbar-toggle-box navbar-toggle-box-collapse"
                     data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo01"
-                    style="border-radius: 100%"
-                >
-                    <i class="bi bi-search"></i>
+                    >
+                    <img src="assets/img/icon.png" alt="Search Icon">
                 </button>
+
             </div>
         </nav>
         <!-- End Header/Navbar -->
