--- a/templates/index.html
+++ b/templates/index.html
@@ -91,6 +91,17 @@
                             <option>Namakkal</option>
                             <option>Ooty</option>
                             <option>Perambalur</option>
+                            <option>Pudukkottai</option>
+                            <option>Ramanathapuram</option>
+                            <option>Salem</option>
+                            <option>Sivaganga</option>
+                            <option>Thanjavur</option>
+                            <option>Tiruvallur</option>
+                            <option>Tirunelveli</option>
+                            <option>Tiruppur</option>
+                            <option>Vellore</option>
+                            <option>Villupuram</option>
+                            <option>Virudhunagar</option>
                             <!-- Add remaining districts here -->
                         </select>
                     </div>
