--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,7 @@
     </head>
 
     <body>
+        
         <!-- ******* Property Search div ******* -->
         <div class="click-closed"></div>
        <!--/ Form Search Star /-->
@@ -225,33 +226,13 @@
                             <a class="nav-link" href="property-grid.html"
                                 >Property</a
                             >
-                        </li>
-
-
-                        <li class="nav-item dropdown">
-                            <a
-                                class="nav-link dropdown-toggle"
-                                href="#"
-                                id="navbarDropdown"
-                                role="button"
-                                data-bs-toggle="dropdown"
-                                aria-haspopup="true"
-                                aria-expanded="false"
-                                >Pages</a
-                            >
-                            <div class="dropdown-menu">
-                                <a
-                                    class="dropdown-item"
-                                    href="property-single.html"
-                                    >Highlight Property</a
-                                >
-                                <a class="dropdown-item" href="agents-grid.html"
-                                    >Our Agents</a
-                                >
-                            </div>
-                        </li>
+                        </li>                     
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="login.html">Login</a>
                         </li>
                     </ul>
                 </div>
@@ -270,7 +251,7 @@
         <!-- End Header/Navbar -->
 
         <!-- ******* Intro div ******* -->
-        <div class="intro intro-carousel swiper position-relative">
+        <div class="intro intro-carousel swiper position-relative"> 
             <div class="swiper-wrapper">
                 <div
                     class="swiper-slide carousel-item-a intro-item bg-image"
